force-app/main/default/objects/SA_Receipt__c/SA_Receipt__c.object-meta.xml
<CustomObject>
    <label>SA Receipt</label>
    <nameField>
        <displayFormat>SAR-{0000000000}</displayFormat>
        <label>SA Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SA Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>