force-app/main/default/objects/SA_Receipt__c/fields/CHEQUE_DATE__c.field-meta.xml
<CustomField>
    <fullName>CHEQUE_DATE__c</fullName>
    <label>Cheque Date</label>
    <type>Date</type>
</CustomField>