force-app/main/default/objects/SA_Receipt__c/fields/RCH_VOIDBOUNCED__c.field-meta.xml
<CustomField>
    <fullName>RCH_VOIDBOUNCED__c</fullName>
    <label>RCH_VOIDBOUNCED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>