force-app/main/default/objects/SA_Receipt__c/fields/RECEIPT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>RECEIPT_NUMBER__c</fullName>
    <externalId>true</externalId>
    <label>Receipt No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>