force-app/main/default/objects/SA_Receipt__c/fields/SA_RECEIPT_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>SA_RECEIPT_AMOUNT__c</fullName>
    <formula>IF(RECEIPT_AMOUNT__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;S$ &quot; &amp;
	IF(ABS(RECEIPT_AMOUNT__c) &gt;= 1000000, TEXT(FLOOR(ABS(RECEIPT_AMOUNT__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
	IF(ABS(RECEIPT_AMOUNT__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(RECEIPT_AMOUNT__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
	RIGHT(TEXT(FLOOR(ABS(RECEIPT_AMOUNT__c))), 3) &amp; &quot;.&quot; &amp;
	IF(MOD(ABS(RECEIPT_AMOUNT__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(RECEIPT_AMOUNT__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(RECEIPT_AMOUNT__c) , 1), 2) * 100, 99))) &amp;
	IF(RECEIPT_AMOUNT__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <type>Text</type>
</CustomField>