force-app/main/default/objects/SA_Receipt__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <label>Sales Agreement</label>
    <referenceTo>Sales_Agreement__c</referenceTo>
    <relationshipLabel>SA Receipts</relationshipLabel>
    <relationshipName>SA_Receipts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>