force-app/main/default/objects/SA_Receipt__c/fields/VSMS_Compound_Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>VSMS_Compound_Primary_Key__c</fullName>
    <externalId>true</externalId>
    <label>VSMS Compound Primary Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>